compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__constant_list_prepending_requires_v1_16_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub const one = []\npub const other = [1, 2, ..one]\n"
---
----- SOURCE CODE

pub const one = []
pub const other = [1, 2, ..one]


----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:3:19
  │
3 │ pub const other = [1, 2, ..one]
  │                   ^^^^^^^^^^^^^ This requires a Gleam version >= 1.16.0

Prepending to a constant list was introduced in version v1.16.0. But the
Gleam version range specified in your `gleam.toml` would allow this code to
run on an earlier version like v1.0.0, resulting in compilation errors!

Hint: Remove the version constraint from your `gleam.toml` or update it to
be:

    gleam = ">= 1.16.0"
