compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecate_type_import_extenal.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 959
expression: "\nimport module.{X}\npub type Y = X\n"
---

warning: Deprecated type import
  ┌─ /src/warning/wrn.gleam:2:16
  │
2 │ import module.{X}
  │                ^

The syntax for importing a type has changed. The new syntax is:

    import module.{type X}

Hint: Run `gleam fix` to auto-fix your code.

