compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_bit_array_type_aliased.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 934
expression: "\nimport gleam.{type BitString as BibbleWib}\npub type B = BibbleWib\n"
---

warning: Deprecated BitString name used
  ┌─ /src/warning/wrn.gleam:2:15
  │
2 │ import gleam.{type BitString as BibbleWib}
  │               ^^^^^^^^^^^^^^

The type BitString has been renamed to BitArray.

Hint: Run `gleam fix` to auto-fix your code.

