compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_bit_string_type.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 883
expression: pub type B = BitString
---

warning: Deprecated BitString name used
  ┌─ /src/warning/wrn.gleam:1:14
  │
1 │ pub type B = BitString
  │              ^^^^^^^^^

The type BitString has been renamed to BitArray.

Hint: Run `gleam fix` to auto-fix your code.

